Docs: Fix layout shift on Safari.

--- a/docs/src/style.css
+++ b/docs/src/style.css
@@ -224,6 +224,10 @@ body {
 	overflow-x: hidden;
 }
 
+html {
+	overflow-y: scroll;
+}
+
 /* Home Page */
 html[data-has-hero] {
 	overflow: hidden;
